Closed Bug 1606731 Opened 6 years ago Closed 6 years ago

Searching for a page in the address bar or history sidebar should ignore diacritics

Categories

(Firefox :: Bookmarks & History, defect, P3)

73 Branch
defect

Tracking

()

RESOLVED FIXED
Firefox 74
Tracking Status
firefox73 --- wontfix
firefox74 --- fixed

People

(Reporter: alexhenrie24, Assigned: alexhenrie24)

References

Details

Attachments

(1 file)

Steps to reproduce:

  1. Visit https://ca.wikipedia.org/

  2. Type "viquipedia" in the address bar

Expected results: https://ca.wikipedia.org/ should appear

Actual results: https://ca.wikipedia.org/ does not appear

Assignee: nobody → alexhenrie24
Status: NEW → ASSIGNED
Priority: -- → P3
Pushed by btara@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3928e048ea3a Ignore diacritics when searching the browser history. r=jfkthame,mak
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 74
Flags: in-testsuite+
Regressions: 1618662
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: