Bug 1606731 - Ignore diacritics when searching the browser history. r=jfkthame,mak

Differential Revision: https://phabricator.services.mozilla.com/D58584